выполнено финальное ТЗ спринта 6